--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ body, html{
 
 /* Hero Section */
 .hero {
-    background: url('/img/banner_no_letter_2.png') center/cover no-repeat;
+    /* background: url('/img/banner_no_letter_2.png') center/cover no-repeat; */
+    background: url('../img/banner_no_letter_2.png') center/cover no-repeat;
     background-size: cover;
     height: 65vh;
     color: white;
