--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@ body, html{
 /* Hero Section */
 .hero {
     /* background: url('/img/banner_no_letter_2.png') center/cover no-repeat; */
-    background: url('img/ banner_color.png') center/cover no-repeat;
-    /* background-size: cover;
-    background-position: left;*/
+    background: url('/img/banner_color.png');
+    /ackground-size: cover;
+    background-position: left;
     height: 100vh;
     color: white;
     display: flex;
