--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,13 @@
-
 body, html{
     width: 100%;
     overflow-x: hidden;
 }
 
-
 /* Hero Section */
 .hero {
-    /* background: url('/img/banner_no_letter_2.png') center/cover no-repeat; */
     background: url('/img/banner_color.png');
-    /ackground-size: cover;
-    background-position: left;
+    background-size: cover;
+    background-position: center;
     height: 100vh;
     color: white;
     display: flex;
