--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body, html{
 
 /* Hero Section */
 .hero {
-    background: url('../img/banner_color.png');
+    background-image: url('img/banner_color.png');
     background-size: cover;
     background-position: center;
     height: 100vh;
