--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
+/* FONTS */
+.roboto {
+  font-family: "Roboto Mono", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.funnels {
+  font-family: "Roboto Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
 body, html{
     width: 100%;
     overflow-x: hidden;
@@ -5,14 +22,20 @@ body, html{
 
 /* Hero Section */
 .hero {
-    background-image: url('https://raw.githubusercontent.com/foxtec198/oticas_atual/b8fabf6715c654408b1d7e8ec4e0c5d9c2d518ae/banner.png');
+    background: url('../img/banner.png');
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;
+    height: 80vh;
     color: white;
     display: flex;
     align-items: center;
     text-align: center;
+}
+
+.hero div{
+    background: #ffa900;
+    border-radius: 5vh;
 }
 
 .subtitle{
