--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
+:root{
+    --hero: url("../img/hero_5.jpg");
+    --primary: #fea000;
+    --primary-hover: #f7aa14;
+}
+
 /* FONTS */
 .roboto {
   font-family: "Roboto Mono", monospace;
@@ -20,25 +26,16 @@ body, html{
 }
 
 /* Hero Section */
-.hero {
-    background: url('../img/banner.png');
+.hero{
+    margin-top: 60px;
+    background: var(--hero) no-repeat;
+    background-position: 92%;
+    height: 80dvh;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 80vh;
-    color: white;
-    display: flex;
-    align-items: center;
-    text-align: center;
-}
-
-.hero div{
-    background: #ffa900;
-    border-radius: 5vh;
 }
 
 .subtitle{
-    text-decoration: underline #f7aa14 5px;
+    text-decoration: underline var(--primary) 8px;
 }
 
 /* Botão WhatsApp flutuante */
@@ -54,14 +51,19 @@ body, html{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
 }
-.btn-oprimary{
-    background-color: #fea000;
-    color: #fff;
+.btn-primary{
+    background-color: var(--primary) !important;
+    color: #fff !important;
+    border: none;
 }
-.btn-oprimary:hover{
-    background-color: #fea000;
-    color: #333;
+.btn-primary:hover{
+    background-color: var(--primary-hover) !important;
+    color: #444 !important;
 }
 .whatsapp-float:hover {
     transform: scale(1.1);
+}
+
+.text-primary{
+    color: var(--primary) !important;
 }
